# mementor

./: .env.example  .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  canister_ids.json  dfx.json
dependencies/icrc1_ledger/: icrc1_ledger.did
scripts/: build-bot.sh  build-minter.sh  build-nft.sh
scripts/dev/: 01-deploy-nft.sh  02-deploy-coin.sh  03-deploy-minter.sh  04-deploy-bot.sh  05-upload-images.sh
scripts/prod/: 01-deploy-nft.sh  02-deploy-coin.sh  03-deploy-minter.sh  04-deploy-bot.sh  05-upload-images.sh  06-deploy-site.sh  07-reg-domain.sh
scripts/utils/: download-dfinity-wasm.sh
